k8s/int/apps/audit/deployment.yaml
---
apiVersion:  apps/v1
kind: Deployment
metadata:
  name: mino-audit
spec:
  replicas: 0
  selector:
    matchLabels:
      app: mino-audit
